--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,50 +1,51 @@
 // Inspired by rayronvictor's PR #248 tp react-native-config
 // https://github.com/luggit/react-native-config/pull/248
 
-def _ext = rootProject.ext
+def safeExtGet(prop, fallback) {
+    rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
+}
 
 buildscript {
-  repositories {
-    maven {
-      url 'https://maven.google.com/'
-      name 'Google'
-    }
-    jcenter()
-    google()
-  }
-
-  dependencies {
-    classpath _ext.has('gradleBuildTools') ? _ext.gradleBuildTools : 'com.android.tools.build:gradle:3.4.0'
+  if (rootProject.buildDir == project.buildDir) {
+      repositories {
+          google()
+          jcenter()
+      }
+      dependencies {
+          classpath 'com.android.tools.build:gradle:3.4.1'
+      }
   }
 }
 
 apply plugin: 'com.android.library'
 
-def _reactNativeVersion = _ext.has('reactNative') ? _ext.reactNative : '+'
-def _compileSdkVersion = _ext.has('compileSdkVersion') ? _ext.compileSdkVersion : 27
-def _buildToolsVersion = _ext.has('buildToolsVersion') ? _ext.buildToolsVersion : '27.0.3'
-def _minSdkVersion = _ext.has('minSdkVersion') ? _ext.minSdkVersion : 16
-def _targetSdkVersion = _ext.has('targetSdkVersion') ? _ext.targetSdkVersion : 27
-
 android {
-  compileSdkVersion _compileSdkVersion
-  buildToolsVersion _buildToolsVersion
+  compileSdkVersion safeExtGet('compileSdkVersion', 28)
+  buildToolsVersion safeExtGet('buildToolsVersion', '28.0.3')
 
   defaultConfig {
-    minSdkVersion _minSdkVersion
-    targetSdkVersion _targetSdkVersion
+    minSdkVersion safeExtGet('minSdkVersion', 16)
+    targetSdkVersion safeExtGet('targetSdkVersion', 28)
+
     versionCode 1
     versionName "1.0"
   }
+
   lintOptions {
     abortOnError false
   }
 }
 
 repositories {
-  mavenCentral()
+  google()
+  jcenter()
+  mavenLocal()
+  maven {
+      // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+      url "$rootDir/../node_modules/react-native/android"
+  }
 }
 
 dependencies {
-  implementation "com.facebook.react:react-native:${_reactNativeVersion}"
+  implementation "com.facebook.react:react-native:+"
 }
